--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@200&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
@@ -27,8 +30,8 @@
   <div class="whole">
     <h1 class="main">To-Do List</h1>
     <div class="fill">
-      <input type="text" id="name" name='task' required placeholder="          Add Your next activity" ; size="50">
-      <button  onclick="adding()" type="button" name="button" class="btn btn-primary add" value="Add">Add</button>
+      <input type="text" id="name" name='task' required placeholder="          Add Your activities" ; size="50">
+      <button onclick="adding()" type="button" name="button" class="btn btn-primary add" value="Add">Add</button>
       <!-- <input class="btn btn-dark clear" type="reset" value="Clear"> -->
     </div>
     <div class="listing">
@@ -37,7 +40,7 @@
     </div>
     <div class="foot">
       <h3 id="pending">You have 0 pending tasks.</h3>
-      <button  onclick="clrall()" type="button" name="button" class="btn btn-dark add" id='clr'>Clear</button>
+      <button onclick="clrall()" type="button" name="button" class="btn btn-dark add" id='clr'>Clear</button>
     </div>
 
   </div>
